# ChangeLog for kde-base/kdegraphics
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdegraphics/ChangeLog,v 1.319 2007/11/12 19:24:41 jer Exp $

  12 Nov 2007; Jeroen Roovers <jer@gentoo.org> kdegraphics-3.5.7-r3.ebuild:
  Stable for HPPA (bug #198409).

  11 Nov 2007; Wulf C. Krueger <philantrop@gentoo.org>
  kdegraphics-3.5.7-r3.ebuild:
  Marked stable on amd64 as per security bug 198409.

*kdegraphics-3.5.8-r1 (10 Nov 2007)
*kdegraphics-3.5.7-r3 (10 Nov 2007)

  10 Nov 2007; Wulf C. Krueger <philantrop@gentoo.org>
  +files/post-3.5.8-kdegraphics-kpdf.diff, +kdegraphics-3.5.7-r3.ebuild,
  +kdegraphics-3.5.8-r1.ebuild:
  Added an upstream patch to fix security bug 198409.

*kdegraphics-3.5.8 (19 Oct 2007)

  19 Oct 2007; Wulf C. Krueger <philantrop@gentoo.org>
  +kdegraphics-3.5.8.ebuild:
  Bump to KDE 3.5.8.

  28 Aug 2007; Wulf C. Krueger <philantrop@gentoo.org>
  +files/kdegraphics-kfile-plugins-3.5.7-openexr-1.6.0.patch,
  kdegraphics-3.5.7-r1.ebuild, kdegraphics-3.5.7-r2.ebuild:
  Added an upstream patch to fix compilation with openexr-1.6.0 as per bug
  189798.

*kdegraphics-3.5.7-r2 (23 Aug 2007)

  23 Aug 2007; Wulf C. Krueger <philantrop@gentoo.org>
  +files/kpdf-3.5.7-hash_path.diff, +kdegraphics-3.5.7-r2.ebuild:
  Added an upstream patch to fix bug 189898. Thanks to Matthias Raffelsieper
  for informing us and providing the patch.

  15 Aug 2007; Jeroen Roovers <jer@gentoo.org> kdegraphics-3.5.7-r1.ebuild:
  Stable for HPPA (bug #176297).

  11 Aug 2007; Raúl Porcel <armin76@gentoo.org>
  kdegraphics-3.5.7-r1.ebuild:
  x86 stable wrt #185823

  10 Aug 2007; Christoph Mende <angelos@gentoo.org>
  kdegraphics-3.5.7-r1.ebuild:
  Stable on amd64 wrt bug #176297

  09 Aug 2007; Markus Rothe <corsair@gentoo.org>
  kdegraphics-3.5.7-r1.ebuild:
  Stable on ppc64; bug #176297

  08 Aug 2007; Raúl Porcel <armin76@gentoo.org>
  kdegraphics-3.5.7-r1.ebuild:
  alpha/ia64 stable wrt #176297
