@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kpdf
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kpdf/ChangeLog,v 1.142 2007/11/12 14:03:35 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kpdf/ChangeLog,v 1.143 2007/11/12 19:25:11 corsair Exp $
+
+  12 Nov 2007; Markus Rothe <corsair@gentoo.org> kpdf-3.5.7-r3.ebuild:
+  Stable on ppc64; bug #198409
 
   12 Nov 2007; Christian Faulhammer <opfer@gentoo.org> kpdf-3.5.7-r3.ebuild:
   stable x86, security bug 198409
